Updated run_all.py and moved to project root directory; reran and converted all notebooks into rst subdir (which is now used by pyaerocom/docs sphinx build routine)

--- a/notebooks/add02_read_ebas_nasa_ames.ipynb
+++ b/notebooks/add02_read_ebas_nasa_ames.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.019 s\n"
+      "Expired time: 0.016 s\n"
      ]
     }
    ],
@@ -152,34 +152,22 @@
       "Pyaerocom EbasNasaAmesFile\n",
       "--------------------------\n",
       "\n",
-      "   num_head_lines: 91\n",
-      "   num_head_fmt: 1001\n",
-      "   data_originator: Flentje, Harald\n",
-      "   sponsor_organisation: DE09L, Deutscher Wetterdienst, DWD, Met. Obs., Hohenspeissenberg, , 82283, Hohenspeissenberg, Germany\n",
-      "   submitter: Flentje, Harald\n",
-      "   project_association: ACTRIS EMEP GAW-WDCA\n",
-      "   vol_num: 1\n",
-      "   vol_totnum: 1\n",
-      "   ref_date: 2010-01-01T00:00:00\n",
-      "   revision_date: 2015-03-04T00:00:00\n",
-      "   freq: 0.041667\n",
-      "   descr_time_unit: days from file reference point\n",
-      "   num_cols_dependent: 23\n",
-      "   mul_factors (list, 23 items)\n",
-      "   [1.0\n",
-      "    1.0\n",
-      "    ...\n",
-      "    1.0\n",
-      "    1.0]\n",
-      "\n",
-      "   vals_invalid (list, 23 items)\n",
-      "   [999.999999\n",
-      "    9999.0\n",
-      "    ...\n",
-      "    9999.999999\n",
-      "    9.999]\n",
-      "\n",
-      "   descr_first_col: end_time of measurement, days from the file reference point\n",
+      "num_head_lines: 91\n",
+      "num_head_fmt: 1001\n",
+      "data_originator: Flentje, Harald\n",
+      "sponsor_organisation: DE09L, Deutscher Wetterdienst, DWD, Met. Obs., Hohenspeissenberg, , 82283, Hohenspeissenberg, Germany\n",
+      "submitter: Flentje, Harald\n",
+      "project_association: ACTRIS EMEP GAW-WDCA\n",
+      "vol_num: 1\n",
+      "vol_totnum: 1\n",
+      "ref_date: 2010-01-01T00:00:00\n",
+      "revision_date: 2015-03-04T00:00:00\n",
+      "freq: 0.041667\n",
+      "descr_time_unit: days from file reference point\n",
+      "num_cols_dependent: 23\n",
+      "mul_factors (list, 23 items): [1.00, 1.00, ..., 1.00, 1.00]\n",
+      "vals_invalid (list, 23 items): [1000, 9999.0, ..., 9999.999999, 10.00]\n",
+      "descr_first_col: end_time of measurement, days from the file reference point\n",
       "\n",
       "   Column variable definitions\n",
       "   -------------------------------\n",
@@ -210,60 +198,60 @@
       "\n",
       "   EBAS meta data\n",
       "   ------------------\n",
-      "   decode_flags: True\n",
-      "   data_definition: EBAS_1.1\n",
-      "   set_type_code: TU\n",
-      "   timezone: UTC\n",
-      "   file_name: DE0043G.20100201000000.20150304123917.nephelometer..pm10.11mo.1h.DE09L_TSI_Neph_3563.DE09L_scatt_NEPH.lev2.nas\n",
-      "   file_creation: 20190320041619\n",
-      "   startdate: 20100201000000\n",
-      "   revision_date: 20150304123917\n",
-      "   version: 1\n",
-      "   version_description: initial revision\n",
-      "   data_level: 2\n",
-      "   period_code: 11mo\n",
-      "   resolution_code: 1h\n",
-      "   sample_duration: 1h\n",
-      "   orig._time_res.: 10mn\n",
-      "   station_code: DE0043G\n",
-      "   platform_code: DE0043S\n",
-      "   station_name: Hohenpeissenberg\n",
-      "   station_wdca-id: GAWADE__HPB\n",
-      "   station_gaw-id: HPB\n",
-      "   station_gaw-name: Hohenpeissenberg\n",
-      "   station_land_use: Grassland\n",
-      "   station_setting: Mountain\n",
-      "   station_gaw_type: G\n",
-      "   station_wmo_region: 6\n",
-      "   station_latitude: 47.8014984131\n",
-      "   station_longitude: 11.0096197128\n",
-      "   station_altitude: 985.0 m\n",
-      "   measurement_height: 15.0 m\n",
-      "   regime: IMG\n",
-      "   component: \n",
-      "   unit: 1/Mm\n",
-      "   matrix: pm10\n",
-      "   laboratory_code: DE09L\n",
-      "   instrument_type: nephelometer\n",
-      "   instrument_name: TSI_Neph_3563\n",
-      "   instrument_manufacturer: TSI\n",
-      "   instrument_model: 3563\n",
-      "   method_ref: DE09L_scatt_NEPH\n",
-      "   standard_method: cal-gas=CO2+AIR_truncation-correction=Anderson1998\n",
-      "   inlet_type: Impactor--direct\n",
-      "   inlet_description: PM10 at ambient humidity inlet, Digitel, flow 170 l/min\n",
-      "   humidity/temperature_control: Nafion dryer\n",
-      "   volume_std._temperature: 273.15 K\n",
-      "   volume_std._pressure: 1013.25 hPa\n",
-      "   detection_limit: 0.3 1/Mm\n",
-      "   detection_limit_expl.: Determined only by instrument counting statistics, no detection limit flag used\n",
-      "   measurement_uncertainty: 0.3 1/Mm\n",
-      "   measurement_uncertainty_expl.: Determined only by instrument counting statistics, no detection limit flag used\n",
-      "   zero/negative_values: Zero values may appear due to statistical variations at very low concentrations\n",
-      "   originator: Flentje, Harald, Harald.Flentje@dwd.de, , , , , , , ,\n",
-      "   submitter: Flentje, Harald, Harald.Flentje@dwd.de, , , , , , , ,\n",
-      "   acknowledgement: Request acknowledgement details from data originator\n",
-      "   comment: Angstrom-based Anderson & Ogren 1998 corr used for truncation correction\n",
+      "decode_flags: True\n",
+      "data_definition: EBAS_1.1\n",
+      "set_type_code: TU\n",
+      "timezone: UTC\n",
+      "file_name: DE0043G.20100201000000.20150304123917.nephelometer..pm10.11mo.1h.DE09L_TSI_Neph_3563.DE09L_scatt_NEPH.lev2.nas\n",
+      "file_creation: 20190530223653\n",
+      "startdate: 20100201000000\n",
+      "revision_date: 20150304123917\n",
+      "version: 1\n",
+      "version_description: initial revision\n",
+      "data_level: 2\n",
+      "period_code: 11mo\n",
+      "resolution_code: 1h\n",
+      "sample_duration: 1h\n",
+      "orig._time_res.: 10mn\n",
+      "station_code: DE0043G\n",
+      "platform_code: DE0043S\n",
+      "station_name: Hohenpeissenberg\n",
+      "station_wdca-id: GAWADE__HPB\n",
+      "station_gaw-id: HPB\n",
+      "station_gaw-name: Hohenpeissenberg\n",
+      "station_land_use: Grassland\n",
+      "station_setting: Mountain\n",
+      "station_gaw_type: G\n",
+      "station_wmo_region: 6\n",
+      "station_latitude: 47.8014984131\n",
+      "station_longitude: 11.0096197128\n",
+      "station_altitude: 985.0 m\n",
+      "measurement_height: 15.0 m\n",
+      "regime: IMG\n",
+      "component: \n",
+      "unit: 1/Mm\n",
+      "matrix: pm10\n",
+      "laboratory_code: DE09L\n",
+      "instrument_type: nephelometer\n",
+      "instrument_name: TSI_Neph_3563\n",
+      "instrument_manufacturer: TSI\n",
+      "instrument_model: 3563\n",
+      "method_ref: DE09L_scatt_NEPH\n",
+      "standard_method: cal-gas=CO2+AIR_truncation-correction=Anderson1998\n",
+      "inlet_type: Impactor--direct\n",
+      "inlet_description: PM10 at ambient humidity inlet, Digitel, flow 170 l/min\n",
+      "humidity/temperature_control: Nafion dryer\n",
+      "volume_std._temperature: 273.15 K\n",
+      "volume_std._pressure: 1013.25 hPa\n",
+      "detection_limit: 0.3 1/Mm\n",
+      "detection_limit_expl.: Determined only by instrument counting statistics, no detection limit flag used\n",
+      "measurement_uncertainty: 0.3 1/Mm\n",
+      "measurement_uncertainty_expl.: Determined only by instrument counting statistics, no detection limit flag used\n",
+      "zero/negative_values: Zero values may appear due to statistical variations at very low concentrations\n",
+      "originator: Flentje, Harald, Harald.Flentje@dwd.de, , , , , , , ,\n",
+      "submitter: Flentje, Harald, Harald.Flentje@dwd.de, , , , , , , ,\n",
+      "acknowledgement: Request acknowledgement details from data originator\n",
+      "comment: Angstrom-based Anderson & Ogren 1998 corr used for truncation correction\n",
       "\n",
       "   Data\n",
       "   --------\n",
@@ -863,7 +851,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyaerocom.io.ebas_nasa_ames.EbasFlagCol at 0x7fa85f47f4e0>"
+       "<pyaerocom.io.ebas_nasa_ames.EbasFlagCol at 0x7f8704aae9e8>"
       ]
      },
      "execution_count": 17,
@@ -1960,7 +1948,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa85ede8da0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f86f6545940>"
       ]
      },
      "execution_count": 24,
