--- a/notebooks/tut02_intro_class_ReadGridded.ipynb
+++ b/notebooks/tut02_intro_class_ReadGridded.ipynb
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.021 s\n"
+      "Expired time: 0.016 s\n"
      ]
     },
     {
@@ -130,9 +130,10 @@
       "---------------------\n",
       "Model ID: ECMWF_CAMS_REAN\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/ECMWF/ECMWF_CAMS_REAN/renamed\n",
-      "Available variables: ['ang4487aer', 'bscatc532aerboa', 'bscatc532aertoa', 'ec532aer', 'od440aer', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'od865aer', 'sconcpm10', 'sconcpm25', 'z']\n",
+      "Available experiments: ['']\n",
       "Available years: [2003, 2004, 2005, 2006, 2007, 2008]\n",
-      "Available time resolutions ['daily', 'monthly']\n"
+      "Available frequencies ['daily', 'monthly']\n",
+      "Available variables: ['ang4487aer', 'bscatc532aerboa', 'bscatc532aertoa', 'ec532aer', 'od440aer', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'od865aer', 'sconcpm10', 'sconcpm25', 'z']\n"
      ]
     }
    ],
@@ -277,41 +278,17 @@
       "---------------------\n",
       "Model ID: ECMWF_CAMS_REAN\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/ECMWF/ECMWF_CAMS_REAN/renamed\n",
-      "Available variables: ['ang4487aer', 'bscatc532aerboa', 'bscatc532aertoa', 'ec532aer', 'od440aer', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'od865aer', 'sconcpm10', 'sconcpm25', 'z']\n",
+      "Available experiments: ['']\n",
       "Available years: [2003, 2004, 2005, 2006, 2007, 2008]\n",
-      "Available time resolutions ['daily', 'monthly']\n",
+      "Available frequencies ['daily', 'monthly']\n",
+      "Available variables: ['ang4487aer', 'bscatc532aerboa', 'bscatc532aertoa', 'ec532aer', 'od440aer', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'od865aer', 'sconcpm10', 'sconcpm25', 'z']\n",
       "\n",
       "Loaded GriddedData objects:\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550aer\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2003-01-01T00:00:00.000000 - 2007-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550bc\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2003-01-01T00:00:00.000000 - 2007-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550dust\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2003-01-01T00:00:00.000000 - 2007-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550oa\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2003-01-01T00:00:00.000000 - 2007-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550so4\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2003-01-01T00:00:00.000000 - 2007-12-31T23:59:59.999999\n"
+      "ID: ECMWF_CAMS_REAN, Var: od550aer\n",
+      "ID: ECMWF_CAMS_REAN, Var: od550bc\n",
+      "ID: ECMWF_CAMS_REAN, Var: od550dust\n",
+      "ID: ECMWF_CAMS_REAN, Var: od550oa\n",
+      "ID: ECMWF_CAMS_REAN, Var: od550so4\n"
      ]
     }
    ],
