--- a/notebooks/tut03_intro_class_ReadGriddedMulti.ipynb
+++ b/notebooks/tut03_intro_class_ReadGriddedMulti.ipynb
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.017 s\n"
+      "Expired time: 0.029 s\n"
      ]
     }
    ],
@@ -129,6 +129,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ReadGriddedMulti class is deprecated and will not be further developed. Please use ReadGridded.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -143,25 +150,28 @@
       "---------------------\n",
       "Model ID: AATSR_SU_v4.3\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/CCI-Aerosol/CCI_AEROSOL_Phase2/AATSR_SU_v4.3/renamed\n",
-      "Available variables: ['abs550aer', 'ang4487aer', 'od550aer', 'od550dust', 'od550erraer', 'od550gt1aer', 'od550lt1aer']\n",
+      "Available experiments: ['AATSR_SU_v4.3']\n",
       "Available years: [2010, 2011, 2012]\n",
-      "Available time resolutions ['daily']\n",
+      "Available frequencies ['daily']\n",
+      "Available variables: ['abs550aer', 'ang4487aer', 'od550aer', 'od550dust', 'od550erraer', 'od550gt1aer', 'od550lt1aer']\n",
       "\n",
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Model ID: CAM5.3-Oslo_CTRL2016\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/AEROCOM-PHASE-III/CAM5.3-Oslo_CTRL2016/renamed\n",
-      "Available variables: ['abs550aer', 'deltaz3d', 'humidity3d', 'od440aer', 'od550aer', 'od550aer3d', 'od550aerh2o', 'od550dryaer', 'od550dust', 'od550lt1aer', 'od870aer']\n",
+      "Available experiments: ['CAM5.3-Oslo_CTRL2016']\n",
       "Available years: [2010]\n",
-      "Available time resolutions ['3hourly', 'daily']\n",
+      "Available frequencies ['3hourly', 'daily']\n",
+      "Available variables: ['abs550aer', 'deltaz3d', 'humidity3d', 'od440aer', 'od550aer', 'od550aer3d', 'od550aerh2o', 'od550dryaer', 'od550dust', 'od550lt1aer', 'od870aer']\n",
       "\n",
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Model ID: ECHAM6-SALSA_AP3-CTRL2015\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/AEROCOM-PHASE-III/ECHAM6-SALSA_AP3-CTRL2015/renamed\n",
-      "Available variables: ['depbc', 'depdust', 'depoa', 'depso4', 'depss', 'emibc', 'emidms', 'emidust', 'emiso2', 'emiso4', 'emiss', 'emivoc', 'emivoct', 'loadbc', 'loaddust', 'loadoa', 'loadso4', 'loadss', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'sconcbc', 'sconcdust', 'sconcoa', 'sconcso4', 'sconcss']\n",
+      "Available experiments: ['ECHAM6-SALSA_AP3-CTRL2015']\n",
       "Available years: [2010]\n",
-      "Available time resolutions ['monthly']\n"
+      "Available frequencies ['monthly']\n",
+      "Available variables: ['depbc', 'depdust', 'depoa', 'depso4', 'depss', 'emibc', 'emidms', 'emidust', 'emiso2', 'emiso4', 'emiss', 'emivoc', 'emivoct', 'loadbc', 'loaddust', 'loadoa', 'loadso4', 'loadss', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'sconcbc', 'sconcdust', 'sconcoa', 'sconcso4', 'sconcss']\n"
      ]
     }
    ],
@@ -315,67 +325,40 @@
       "---------------------\n",
       "Model ID: AATSR_SU_v4.3\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/CCI-Aerosol/CCI_AEROSOL_Phase2/AATSR_SU_v4.3/renamed\n",
-      "Available variables: ['abs550aer', 'ang4487aer', 'od550aer', 'od550dust', 'od550erraer', 'od550gt1aer', 'od550lt1aer']\n",
+      "Available experiments: ['AATSR_SU_v4.3']\n",
       "Available years: [2010, 2011, 2012]\n",
-      "Available time resolutions ['daily']\n",
+      "Available frequencies ['daily']\n",
+      "Available variables: ['abs550aer', 'ang4487aer', 'od550aer', 'od550dust', 'od550erraer', 'od550gt1aer', 'od550lt1aer']\n",
       "\n",
       "Loaded GriddedData objects:\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550aer\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2011-01-01T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550dust\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2011-01-01T23:59:59.999999\n",
+      "ID: AATSR_SU_v4.3, Var: od550aer\n",
+      "ID: AATSR_SU_v4.3, Var: od550dust\n",
       "\n",
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Model ID: CAM5.3-Oslo_CTRL2016\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/AEROCOM-PHASE-III/CAM5.3-Oslo_CTRL2016/renamed\n",
-      "Available variables: ['abs550aer', 'deltaz3d', 'humidity3d', 'od440aer', 'od550aer', 'od550aer3d', 'od550aerh2o', 'od550dryaer', 'od550dust', 'od550lt1aer', 'od870aer']\n",
+      "Available experiments: ['CAM5.3-Oslo_CTRL2016']\n",
       "Available years: [2010]\n",
-      "Available time resolutions ['3hourly', 'daily']\n",
+      "Available frequencies ['3hourly', 'daily']\n",
+      "Available variables: ['abs550aer', 'deltaz3d', 'humidity3d', 'od440aer', 'od550aer', 'od550aer3d', 'od550aerh2o', 'od550dryaer', 'od550dust', 'od550lt1aer', 'od870aer']\n",
       "\n",
       "Loaded GriddedData objects:\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550aer\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2010-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550dust\n",
-      "Temporal resolution: daily\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2010-12-31T23:59:59.999999\n",
+      "ID: CAM5.3-Oslo_CTRL2016, Var: od550aer\n",
+      "ID: CAM5.3-Oslo_CTRL2016, Var: od550dust\n",
       "\n",
       "Pyaerocom ReadGridded\n",
       "---------------------\n",
       "Model ID: ECHAM6-SALSA_AP3-CTRL2015\n",
       "Data directory: /lustre/storeA/project/aerocom/aerocom-users-database/AEROCOM-PHASE-III/ECHAM6-SALSA_AP3-CTRL2015/renamed\n",
-      "Available variables: ['depbc', 'depdust', 'depoa', 'depso4', 'depss', 'emibc', 'emidms', 'emidust', 'emiso2', 'emiso4', 'emiss', 'emivoc', 'emivoct', 'loadbc', 'loaddust', 'loadoa', 'loadso4', 'loadss', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'sconcbc', 'sconcdust', 'sconcoa', 'sconcso4', 'sconcss']\n",
+      "Available experiments: ['ECHAM6-SALSA_AP3-CTRL2015']\n",
       "Available years: [2010]\n",
-      "Available time resolutions ['monthly']\n",
+      "Available frequencies ['monthly']\n",
+      "Available variables: ['depbc', 'depdust', 'depoa', 'depso4', 'depss', 'emibc', 'emidms', 'emidust', 'emiso2', 'emiso4', 'emiss', 'emivoc', 'emivoct', 'loadbc', 'loaddust', 'loadoa', 'loadso4', 'loadss', 'od550aer', 'od550bc', 'od550dust', 'od550oa', 'od550so4', 'od550ss', 'sconcbc', 'sconcdust', 'sconcoa', 'sconcso4', 'sconcss']\n",
       "\n",
       "Loaded GriddedData objects:\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550aer\n",
-      "Temporal resolution: monthly\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2010-12-31T23:59:59.999999\n",
-      "\n",
-      "Pyaerocom GriddedData\n",
-      "---------------------\n",
-      "Variable: od550dust\n",
-      "Temporal resolution: monthly\n",
-      "Start / Stop: 2010-01-01T00:00:00.000000 - 2010-12-31T23:59:59.999999\n"
+      "ID: ECHAM6-SALSA_AP3-CTRL2015, Var: od550aer\n",
+      "ID: ECHAM6-SALSA_AP3-CTRL2015, Var: od550dust\n"
      ]
     }
    ],
