--- a/notebooks/tut04_intro_class_GriddedData.ipynb
+++ b/notebooks/tut04_intro_class_GriddedData.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.017 s\n"
+      "Expired time: 0.025 s\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This did not work...error message: NetcdfError(\"Could not load single cube from /lustre/storeA/project/aerocom/aerocom1/ECMWF_OSUITE_NRT_test/renamed/aerocom.ECMWF_OSUITE_NRT_test.daily.od550aer.2018.nc. Please specify var_name. Input file contains the following variables: ['od550aer', 'od550so4', 'od550bc', 'od550dust', 'od550oa']\",)\n"
+      "This did not work...error message: NetcdfError(\"Could not load single cube from /lustre/storeA/project/aerocom/aerocom1/ECMWF_OSUITE_NRT_test/renamed/aerocom.ECMWF_OSUITE_NRT_test.daily.od550aer.2018.nc. Please specify var_name. Input file contains the following variables: ['od550aer', 'od550dust', 'od550bc', 'od550so4', 'od550oa']\",)\n"
      ]
     }
    ],
@@ -422,7 +422,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f2e054424a8>"
+       "<matplotlib.legend.Legend at 0x7ff954ecb278>"
       ]
      },
      "execution_count": 12,
