Updated sections in tutorial notebooks and applied some minor changes, added a new notebook add05_variables.ipynb and removed rst directory (converted rst notebooks are for now saved in pyaerocom/docs again)

--- a/notebooks/add05_example_format_read_ModelLevel.ipynb
+++ b/notebooks/add05_example_format_read_ModelLevel.ipynb
@@ -53,7 +53,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.025 s\n"
+      "Expired time: 0.020 s\n"
      ]
     }
    ],
@@ -99,15 +99,15 @@
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/cf.py:1069: UserWarning: Ignoring formula terms variable 'ps' referenced by data variable 'b_bnds' via variable 'lev': Dimensions ('time', 'lat', 'lon') do not span ('lev', 'bnds')\n",
       "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/cf.py:1069: UserWarning: Ignoring formula terms variable 'ps' referenced by data variable 'a_bnds' via variable 'lev': Dimensions ('time', 'lat', 'lon') do not span ('lev', 'bnds')\n",
-      "  warnings.warn(msg)\n"
+      "  warnings.warn(msg)\n",
+      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/netcdf.py:599: UserWarning: Unable to find coordinate for variable 'ps'\n",
+      "  '{!r}'.format(name))\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/netcdf.py:599: UserWarning: Unable to find coordinate for variable 'ps'\n",
-      "  '{!r}'.format(name))\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/netcdf.py:599: UserWarning: Unable to find coordinate for variable 'ps'\n",
       "  '{!r}'.format(name))\n"
      ]
