--- a/notebooks/tut01_intro_regions.ipynb
+++ b/notebooks/tut01_intro_regions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### AEROCOM default regions\n",
+    "## AEROCOM default regions (class `Region`)\n",
     "\n",
     "This notebook introduces how pya handles information related to default regions (e.g. Europe, Asia, ...) as used in the [AEROCOM interface](http://aerocom.met.no/cgi-bin/AEROCOM/aerocom/surfobs_annualrs.pl). All default regions are defined in the file [regions.ini](http://aerocom.met.no/pya/config_files.html#default-regions)."
    ]
@@ -53,9 +53,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.019 s\n"
+      "Expired time: 0.026 s\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "import pyaerocom as pya"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What regions are available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
@@ -71,14 +88,12 @@
        " 'NAMERICA']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pyaerocom as pya\n",
-    "\n",
     "pya.region.all()"
    ]
   },
@@ -90,8 +105,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a `Region`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -139,29 +161,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load example data and apply region specific crop\n",
+    "### Load example data and apply region specific crop\n",
     "\n",
     "In the following cell, we create an instance of the `GriddedData` class (hich is introduced in more detail in a later tutorial), load some test data (from the CAMS ECMWF OSUITE dataset), crop it and plot a map of the results over Europe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550so4' invalid units '~'\n",
+      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550oa' invalid units '~'\n",
       "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550dust' invalid units '~'\n",
       "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550aer' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550oa' invalid units '~'\n",
+      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550so4' invalid units '~'\n",
       "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550bc' invalid units '~'\n",
+      "  warnings.warn(msg)\n",
+      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550aer' invalid units '~'\n",
       "  warnings.warn(msg)\n"
      ]
     },
@@ -189,6 +211,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Computing distance to centre of region\n",
+    "\n",
+    "For a given lat / lon coordinate, distances to the region centre coordinate can be computed as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3476.358401761219"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dc = asia.distance_to_center(lat=45, lon=60)\n",
+    "dc #km"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Access centre coordinate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30.0, 95.0)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asia.center_coordinate # (lat, lon)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "asia.distance_to_center(30, 95)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "That's it. Not much more to say about regions until now."
    ]
   }
@@ -209,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
