--- a/notebooks/tut05_intro_ungridded_reading.ipynb
+++ b/notebooks/tut05_intro_ungridded_reading.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reading of ungridded observation datasets in pyaerocom\n",
+    "## Reading of ungridded observation datasets in pyaerocom\n",
     "\n",
     "\n",
-    "#### Primer on observation datasets\n",
+    "### Primer on observation datasets\n",
     "\n",
     "- Observation data is often provided ungridded in the form of ASCII text files that contain both the data and relevant metadata. \n",
     "- In ***pyaerocom*** such datasets are referred to as ***ungridded data*** since it is sparse observations at different locations and at different times.\n",
@@ -17,7 +17,7 @@
     "- For some databases, there is exactly one file per station (containing all available data from that station). This is the case in the example dataset shown below (Aeronet Sun version 3 level2 daily data). However, the general case is that there may be more than one file per station (the [EBAS](http://ebas.nilu.no/) database is such an example, where there can be multiple data files per station, [see this notebook](https://pyaerocom.met.no/tutorials.html#merging-of-several-stationdata-objects-into-one) for an example of how complicated it may get).\n",
     "\n",
     "\n",
-    "#### Data access\n",
+    "### Data access\n",
     "\n",
     "Both the model and the observation datasets related to the AeroCom project are stored on internal servers at the Norwegian Meteorological Institute (METNO). On import, pyaerocom automatically checks if it can access the METNO servers containing the data.\n",
     "\n",
@@ -25,16 +25,11 @@
     "\n",
     "For instance, below we are going to work with AERONET Sun photometer data, using the version 3, level 2 daily data product. The corresponding ID for this dataset in pyaerocom is ***AeronetSunV3Lev2.daily***.\n",
     "\n",
-    "#### **NOTE**\n",
+    "### **NOTE**\n",
     "\n",
     "**This notebook requires access to the AeroCom database and will not work if you do not have access to the AeroCom servers at METNO**\n",
     "\n",
-    "#### More info about pyaerocom\n",
-    "\n",
-    "- Website and code documentation (API): https://pyaerocom.met.no/\n",
-    "- GitHub: https://github.com/metno/pyaerocom\n",
-    "\n",
-    "#### If you run into problems\n",
+    "### If you run into problems\n",
     "\n",
     "Please [create an issue](https://github.com/metno/pyaerocom/issues) if you run into problems or have suggestions for improvements."
    ]
@@ -43,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Reading of and investigating Aeronet Sun AODs (version 3, level 2 data)"
+    "### Reading of and investigating Aeronet Sun AODs (version 3, level 2 data)"
    ]
   },
   {
@@ -90,7 +85,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.016 s\n"
+      "Expired time: 0.014 s\n"
      ]
     }
    ],
@@ -129,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Search data ID for Aeronet Sun version 2 level 2, daily data\n",
+    "### Search data ID for Aeronet Sun version 2 level 2, daily data\n",
     "\n",
     "The `browse_database` method helps you to find model or observation datasets."
    ]
@@ -192,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Pick one (or more) variable(s) of interest"
+    "### Pick one (or more) variable(s) of interest"
    ]
   },
   {
@@ -218,7 +213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Read the AODs from the whole database (all available stations / times) using the ReadUngridded class\n",
+    "### Read the AODs from the whole database (all available stations / times) using the ReadUngridded class\n",
     "\n",
     "Since the dataformats are usually specific for each observation dataset / network, each supported dataset has it's own reading routine in pyaerocom. The individual reading routines can be found in the `pyaerocom.io` module. For instance, the class"
    ]
@@ -273,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create instance of ReadUngridded class"
+    "### Create instance of ReadUngridded class"
    ]
   },
   {
@@ -347,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Read the dataset \n",
+    "### Read the dataset \n",
     "\n",
     "The `read` method loops over all files that exist for this dataset and reads them into one data object (`data`) which contains the whole dataset.\n",
     "\n",
@@ -451,23 +446,6 @@
    "metadata": {},
    "source": [
     "Finally, store the data object so that it can be used in the next tutorial:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'data' (UngriddedData)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%store data"
    ]
   }
  ],
