--- a/notebooks/tut07_intro_colocation.ipynb
+++ b/notebooks/tut07_intro_colocation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Colocating gridded data with discrete observations\n",
+    "## Colocation of model data with observations\n",
     "\n",
     "This notebook gives an introduction into collocation of gridded data with observations. Here, the 550 nm AODs of the ECMWF CAMS reanalysis model are compared with global daily AeroNet Sun V2 (Level 2) data for the year 2010. The collocated data will be analysed and visualised in monthly resolution. The analysis results will be plotted in the form of the well known Aerocom loglog scatter plots as can be found in the online interface (see e.g. [here](http://aerocom.met.no/cgi-bin/aerocom/surfobs_annualrs.pl))."
    ]
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import setup and imports"
+    "### Import setup and imports"
    ]
   },
   {
@@ -60,7 +60,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.017 s\n"
+      "Expired time: 0.014 s\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import of model data\n",
+    "### Import of model data\n",
     "\n",
     "Create reader instance for model data and print overview of what is in there."
    ]
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import of AeroNet Sun V3 data (Level 2)\n",
+    "### Import of AeroNet Sun V3 data (Level 2)\n",
     "\n",
     "Import Aeronet data and apply filter that selects only stations that are located at altitudes between 0 and 1000 m."
    ]
@@ -204,7 +204,7 @@
       "Contains instruments: ['sun_photometer']\n",
       "Total no. of meta-blocks: 1025\n",
       "Filters that were applied:\n",
-      " Filter time log: 20190603141344\n",
+      " Filter time log: 20190604164933\n",
       "\taltitude: [0, 1000]\n"
      ]
     }
@@ -219,7 +219,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot station coordinates\n",
+    "### Plot station coordinates\n",
     "\n",
     "First, plot all stations that are available at all times (as red dots), then (on top of that in green), plot all stations that provide AODs in 2010."
    ]
@@ -256,14 +256,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now perform collocation and plot corresponding scatter plots with statistical values"
+    "### Now perform collocation and plot corresponding scatter plots with statistical values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2010 monthly World no mountains\n",
+    "#### 2010 monthly World no mountains\n",
     "\n",
     "Colocate 2010 data in monthly resolution using (cf. green dots in station plot above)."
    ]
@@ -392,7 +392,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f761013e438>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4e8409b2e8>"
       ]
      },
      "execution_count": 9,
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2010 daily Europe no mountains\n",
+    "#### 2010 daily Europe no mountains\n",
     "\n",
     "Now perform colocation only over Europe. Starting with a station plot."
    ]
@@ -433,7 +433,7 @@
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.geoaxes.GeoAxes at 0x7f7605d7aa58>"
+       "<cartopy.mpl.geoaxes.GeoAxes at 0x7f4e70f90a90>"
       ]
      },
      "execution_count": 10,
@@ -564,7 +564,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f76101ef668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4e70f70400>"
       ]
      },
      "execution_count": 12,
