--- a/notebooks/add01_intro_time_handling.ipynb
+++ b/notebooks/add01_intro_time_handling.ipynb
@@ -69,7 +69,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.019 s\n"
+      "Expired time: 0.017 s\n"
      ]
     }
    ],
@@ -90,8 +90,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550dust' invalid units '~'\n",
-      "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550bc' invalid units '~'\n",
       "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550so4' invalid units '~'\n",
@@ -99,7 +97,17 @@
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550aer' invalid units '~'\n",
       "  warnings.warn(msg)\n",
       "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550oa' invalid units '~'\n",
-      "  warnings.warn(msg)\n"
+      "  warnings.warn(msg)\n",
+      "/home/jonasg/anaconda3/lib/python3.6/site-packages/iris/fileformats/_pyke_rules/compiled_krb/fc_rules_cf_fc.py:1932: UserWarning: Ignoring netCDF variable 'od550dust' invalid units '~'\n",
+      "  warnings.warn(msg)\n",
+      "Ignoring input name=ECMWF_OSUITE\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ignoring input name=AATSR\n"
      ]
     }
    ],
@@ -331,7 +339,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "110 ms ± 26.1 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "85.6 ms ± 1.57 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -349,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "105 ms ± 12.3 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "85.7 ms ± 587 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -374,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "104 ms ± 7.5 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "85.6 ms ± 1.18 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -392,7 +400,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "128 ms ± 26 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "87.6 ms ± 1 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -421,7 +429,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.57 ms ± 185 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "4.53 ms ± 129 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -530,7 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "246 µs ± 11.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "232 µs ± 4.83 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -555,7 +563,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.09 ms ± 99 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "6.28 ms ± 81.9 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -582,7 +590,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "329 µs ± 45.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "281 µs ± 31.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -600,7 +608,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.92 ms ± 737 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "6.25 ms ± 81.6 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -626,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
