--- a/notebooks/add02_read_ebas_nasa_ames.ipynb
+++ b/notebooks/add02_read_ebas_nasa_ames.ipynb
@@ -57,7 +57,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.016 s\n"
+      "Expired time: 0.018 s\n"
      ]
     }
    ],
@@ -851,7 +851,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyaerocom.io.ebas_nasa_ames.EbasFlagCol at 0x7f8704aae9e8>"
+       "<pyaerocom.io.ebas_nasa_ames.EbasFlagCol at 0x7fb710f41a90>"
       ]
      },
      "execution_count": 17,
@@ -1948,7 +1948,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f86f6545940>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fb7029d8ba8>"
       ]
      },
      "execution_count": 24,
