--- a/notebooks/add04_stationdata_merging.ipynb
+++ b/notebooks/add04_stationdata_merging.ipynb
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expired time: 0.022 s\n"
+      "Expired time: 0.025 s\n"
      ]
     }
    ],
@@ -79,98 +79,98 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 1-3 of 28 (ReadEbas) | 14:21:46 (delta = 0 s')\n"
+      "Reading files 1-3 of 28 (ReadEbas) | 17:00:06 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 3-5 of 28 (ReadEbas) | 14:21:47 (delta = 0 s')\n"
+      "Reading files 3-5 of 28 (ReadEbas) | 17:00:06 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 5-7 of 28 (ReadEbas) | 14:21:47 (delta = 0 s')\n"
+      "Reading files 5-7 of 28 (ReadEbas) | 17:00:07 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 7-9 of 28 (ReadEbas) | 14:21:48 (delta = 0 s')\n"
+      "Reading files 7-9 of 28 (ReadEbas) | 17:00:07 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 9-11 of 28 (ReadEbas) | 14:21:48 (delta = 0 s')\n"
+      "Reading files 9-11 of 28 (ReadEbas) | 17:00:09 (delta = 1 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 11-13 of 28 (ReadEbas) | 14:21:49 (delta = 0 s')\n"
+      "Reading files 11-13 of 28 (ReadEbas) | 17:00:10 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 13-15 of 28 (ReadEbas) | 14:21:50 (delta = 0 s')\n"
+      "Reading files 13-15 of 28 (ReadEbas) | 17:00:11 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 15-17 of 28 (ReadEbas) | 14:21:51 (delta = 0 s')\n"
+      "Reading files 15-17 of 28 (ReadEbas) | 17:00:11 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 17-19 of 28 (ReadEbas) | 14:21:52 (delta = 1 s')\n"
+      "Reading files 17-19 of 28 (ReadEbas) | 17:00:13 (delta = 1 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 19-21 of 28 (ReadEbas) | 14:21:53 (delta = 0 s')\n"
+      "Reading files 19-21 of 28 (ReadEbas) | 17:00:14 (delta = 0 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 21-23 of 28 (ReadEbas) | 14:21:54 (delta = 0 s')\n"
+      "Reading files 21-23 of 28 (ReadEbas) | 17:00:15 (delta = 1 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 23-25 of 28 (ReadEbas) | 14:21:55 (delta = 1 s')\n"
+      "Reading files 23-25 of 28 (ReadEbas) | 17:00:16 (delta = 1 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 25-27 of 28 (ReadEbas) | 14:21:58 (delta = 2 s')\n"
+      "Reading files 25-27 of 28 (ReadEbas) | 17:00:17 (delta = 1 s')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Reading files 27-29 of 28 (ReadEbas) | 14:22:00 (delta = 1 s')\n"
+      "Reading files 27-29 of 28 (ReadEbas) | 17:00:18 (delta = 1 s')\n"
      ]
     },
     {
@@ -185,7 +185,7 @@
       "Contains instruments: ['IN3563', 'TSI_3563_JFJ_dry', 'Ecotech_Aurora3000_JFJ_dry']\n",
       "Total no. of meta-blocks: 28\n",
       "Filters that were applied:\n",
-      " Filter time log: 20190603142146\n",
+      " Filter time log: 20190604170006\n",
       "\tprefer_statistics: ['arithmetic mean', 'median']\n",
       "\twavelength_tol_nm: 50\n",
       "\tremove_invalid_flags: True\n",
@@ -792,7 +792,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f117195e828>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f68285c9fd0>"
       ]
      },
      "execution_count": 14,
@@ -1066,7 +1066,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f1171b0cc50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f68288fecc0>"
       ]
      },
      "execution_count": 20,
